[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
packets = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync"] }
errors = { workspace = true }
log = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = "5.5.3"
bztree = "0.2.0"
crossbeam-epoch = "0.9.18"
arc-swap = "1.6.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rstest = "0.19.0"

[[bench]]
name = "clist_benches"
harness = false
